creat section custmer add in sal and it works

--- a/New_version/templates/SA/Customer/index.html
+++ b/New_version/templates/SA/Customer/index.html
@@ -67,7 +67,7 @@
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title">{{i[4]}}</span>
+                                                                    <span class="title">{{i[1]}}</span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
@@ -82,7 +82,26 @@
                                                             <div class="nk-tb-col tb-col-md">
                                                                 <span class="tb-sub">{{i[2]}}</span>
                                                             </div>
+                                                            <div class="nk-tb-col nk-tb-col-tools">
+                                                                <ul class="nk-tb-actions gx-1 my-n1">
+                                                                    <li class="me-n1">
+                                                                        <div class="dropdown">
+                                                                            <a href="#" class="dropdown-toggle btn btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
+                                                                            <div class="dropdown-menu dropdown-menu-end">
+                                                                                <ul class="link-list-opt no-bdr">
+                                                                                    <li>
+                                                                                        <a href="/SA/delet_customer?id={{i[0]}}"><em class="icon ni ni-trash"></em><span>حذف مشتری</span></a>
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a href="/SA/edit_customer?id={{i[0]}}"><em class="icon ni ni-edit"></em><span>ویرایش مشتری</span></a>
+                                                                                    </li>
+                                                                                </ul>
+                                                                            </div>
+                                                                        </div>
+                                                                    </li>
 
+                                                                </ul>
+                                                            </div>
                                                         </div>
                                                         {%endfor%}
                                                         <!-- .nk-tb-item -->
