--- a/New_version/templates/SA/Customer/ADD_Customer.html
+++ b/New_version/templates/SA/Customer/ADD_Customer.html
@@ -9,7 +9,7 @@
                                         <div class="nk-block-between">
                                             <div class="nk-block-head-content">
                                                 <h3 class="nk-block-title page-title">
-                                                   اضافه کردن مشتری غیر
+                                                   اضافه کردن مشتری
                                                 </h3>
                                                 <div class="nk-block-des text-soft">
                                                     <p>{{user}}  </p>
@@ -67,39 +67,29 @@
                                             <!-- .col -->
                                             <div class="col-xxl-8">
 
-                                            <form class="form-group" method="get" action="/IT/Insert_Customers_G">
+                                            <form class="form-group" method="get" action="/SA/Insert_Customers">
                                                 <div class="form-group">
                                                     <label class="form-label" >نام مشتری</label>
                                                     <div class="form-control-wrap">
                                                         <input type="text" class="form-control" name="firstname" value="" placeholder="نام مشتری" required>
                                                     </div>
                                                 </div>
+
                                                 <div class="form-group">
-                                                    <label class="form-label">نام خانوادگی مشتری</label>
+                                                    <label class="form-label">آدرس مشتری</label>
                                                     <div class="form-control-wrap">
-                                                        <input type="text" class="form-control" name="lastname" value="" placeholder="نام خانوداگی مشتری" required>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="form-label">کد ملی مشتری</label>
-                                                    <div class="form-control-wrap">
-                                                        <input type="text" class="form-control" name="N_id" value="" placeholder="کدملی مشتری" required>
+                                                        <input type="text" class="form-control" name="adress" value="" placeholder="آدرس مشتری" required>
                                                     </div>
                                                 </div>
                                                 <hr>
                                                 <div class="form-group">
-                                                    <label class="form-label">شماره همراه مشتری</label>
+                                                    <label class="form-label">شماره تلفن مشتری</label>
                                                     <div class="form-control-wrap">
-                                                        <input type="text" class="form-control" name="username" value="" placeholder="شماره همراه مشتری (بدون صفر)" required>
+                                                        <input type="text" class="form-control" name="phone" value="" placeholder="شماره همراه مشتری (بدون صفر)" required>
                                                     </div>
                                                 </div>
                                                 <hr>
-                                                <div class="form-group">
-                                                    <label class="form-label">ایمیل مشتری</label>
-                                                    <div class="form-control-wrap">
-                                                        <input type="email" class="form-control" name="email" value="" placeholder="ایمیل مشتری" required>
-                                                    </div>
-                                                </div>
+
                                                 <hr>
                                                  <div>
                                                     <div class="row g-gs">
@@ -117,9 +107,9 @@
                                                         <div class="col-xxl-4">
                                                             <div class="form-group">
 
-                                                                    <label class="form-label">آدرس مشتری</label>
+                                                                    <label class="form-label">کدملی مشتری</label>
                                                                     <div class="form-control-wrap">
-                                                                        <input type="text" class="form-control" name="address" value="" placeholder="آدرس مشتری" required>
+                                                                        <input type="text" class="form-control" name="N_code" value="" placeholder="کدملی مشتری" required>
                                                                     </div>
 
 
@@ -128,9 +118,9 @@
                                                         <div class="col-xxl-4">
                                                             <div class="form-group">
 
-                                                                    <label class="form-label">شهر مشتری</label>
+                                                                    <label class="form-label">کد اقتصادی مشتری</label>
                                                                     <div class="form-control-wrap">
-                                                                        <input type="text" class="form-control" name="city" value="" placeholder="شهر مشتری" required>
+                                                                        <input type="text" class="form-control" name="E_code" value="" placeholder="کد اقصتادی مشتری" required>
                                                                     </div>
 
 
@@ -162,7 +152,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                 <div class="nk-sidebar-content">
+                <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -174,81 +164,44 @@
                                     </li>
                                     <!-- .nk-menu-heading -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Invoice" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
                                             <span class="nk-menu-text">فاکتور ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/SA/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                                <a href="/SA/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Product_list" class="nk-menu-link nk-menu-toggle">
-                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
-                                            <span class="nk-menu-text">محصولات</span>
-                                        </a>
-                                        <ul class="nk-menu-sub">
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Product_list" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
-                                            </li>
-                                        </ul>
-                                        <!-- .nk-menu-sub -->
-                                    </li>
-                                    <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Customers" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Customer" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-user-list"></em></span>
                                             <span class="nk-menu-text">مشتریان</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
-                                            </li>
-                                        </ul>
-                                        <!-- .nk-menu-sub -->
-                                    </li>
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-                                    <li class="nk-menu-item has-sub">
-                                        <a href="/IT/getdata" class="nk-menu-link nk-menu-toggle">
-                                            <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
-                                            <span class="nk-menu-text">جمع آوری دیتا</span>
-                                        </a>
-                                        <ul class="nk-menu-sub">
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/SA/Customer" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
                                             </li>
 
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
-                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Tickets" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Tickets" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
                                             <span class="nk-menu-text">تیکت ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
+                                                <a href="/SA/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
                                             </li>
 
                                         </ul>
