creat section delet customer in sale section and it works

--- a/New_version/templates/SA/Customer/index.html
+++ b/New_version/templates/SA/Customer/index.html
@@ -93,7 +93,7 @@
                                                                                         <a href="/SA/delet_customer?id={{i[0]}}"><em class="icon ni ni-trash"></em><span>حذف مشتری</span></a>
                                                                                     </li>
                                                                                     <li>
-                                                                                        <a href="/SA/edit_customer?id={{i[0]}}"><em class="icon ni ni-edit"></em><span>ویرایش مشتری</span></a>
+                                                                                        <a href="/SA/Customer"><em class="icon ni ni-edit"></em><span>ویرایش مشتری</span></a>
                                                                                     </li>
                                                                                 </ul>
                                                                             </div>
