creat section preinvoice and get pages option to it for Sale section and creat addpreinvoice section to but it isnot working

--- a/New_version/templates/SA/Pre_invoice/index.html
+++ b/New_version/templates/SA/Pre_invoice/index.html
@@ -20,6 +20,20 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            <div class="nk-block-head-content">
+                                                <div class="toggle-wrap nk-block-tools-toggle">
+                                                    <a href="#" class="btn btn-icon btn-trigger toggle-expand me-n1" data-target="pageMenu"><em class="icon ni ni-more-v"></em></a>
+                                                    <div class="toggle-expand-content" data-content="pageMenu">
+                                                        <ul class="nk-block-tools g-3">
+                                                            <li class="nk-block-tools-opt">
+                                                                <a href="/SA/Pre_Invoice?limit_id={{limit_id+10}}" class="btn btn-primary  d-md-inline-flex"><span>صفحه بعد</span></a>
+                                                                <a href="/SA/Pre_Invoice?limit_id={{limit_id-10}}" class="btn btn-primary d-md-inline-flex"><span>صفحه قبل</span></a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <!-- .nk-block-head-content -->
                                         </div>
                                         <!-- .nk-block-between -->
