--- a/New_version/templates/SA/Customer/index.html
+++ b/New_version/templates/SA/Customer/index.html
@@ -20,6 +20,19 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="nk-block-head-content">
+                                                <div class="toggle-wrap nk-block-tools-toggle">
+                                                    <a href="#" class="btn btn-icon btn-trigger toggle-expand me-n1" data-target="pageMenu"><em class="icon ni ni-more-v"></em></a>
+                                                    <div class="toggle-expand-content" data-content="pageMenu">
+                                                        <ul class="nk-block-tools g-3">
+                                                            <li class="nk-block-tools-opt">
+                                                                <a href="/SA/Customer?limit_id={{limit_id+10}}" class="btn btn-primary  d-md-inline-flex"><span>صفحه بعد</span></a>
+                                                                <a href="/SA/Customer?limit_id={{limit_id-10}}" class="btn btn-primary d-md-inline-flex"><span>صفحه قبل</span></a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <!-- .nk-block-head-content -->
                                         </div>
                                         <!-- .nk-block-between -->
@@ -115,88 +128,7 @@
                                         </div>
                                     </div>
                                     <!-- .nk-block -->
-                                    <div class="nk-add-product toggle-slide toggle-slide-right" data-content="addProduct" data-toggle-screen="any" data-toggle-overlay="true" data-toggle-body="true" data-simplebar>
-                                        <div class="nk-block-head">
-                                            <div class="nk-block-head-content">
-                                                <h5 class="nk-block-title">محصول جدید</h5>
-                                                <div class="nk-block-des">
-                                                    <p>محصول جدید و اطلاعات آن را اضافه کنید.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- .nk-block-head -->
-                                        <div class="nk-block">
-                                            <div class="row g-3">
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="product-title">عنوان محصول</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="product-title" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="regular-price">قیمت عادی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="number" class="form-control" id="regular-price" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="sale-price">قیمت فروش</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="number" class="form-control" id="sale-price" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="stock">موجودی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="stock" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="SKU">شناسه محصول</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="SKU" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="category">دسته بندی</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="category" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="form-group">
-                                                        <label class="form-label" for="tags">برچسب</label>
-                                                        <div class="form-control-wrap">
-                                                            <input type="text" class="form-control" id="tags" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <div class="upload-zone small bg-lighter my-2">
-                                                        <div class="dz-message">
-                                                            <span class="dz-message-text">فایل را بکشید و رها کنید</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-12">
-                                                    <button class="btn btn-primary"><em class="icon ni ni-plus"></em><span>افزودن جدید</span></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- .nk-block -->
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -204,7 +136,7 @@
 {% endblock %}
 
 {% block menu %}
-<div class="nk-sidebar-content">
+                        <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
