--- a/New_version/templates/SA/Pre_invoice/Pre_invoice_add_products.html
+++ b/New_version/templates/SA/Pre_invoice/Pre_invoice_add_products.html
@@ -67,20 +67,20 @@
                                             <!-- .col -->
                                             <div class="col-xxl-8">
 
-                                            <form class="form-group" method="get" action="/IT/add_preinvoice_finall">
+                                            <form class="form-group" method="get" action="/SA/add_preinvoice_finall_check">
 
                                                 <div class="form-group">
                                                     <label class="form-label" data-search="on" id="C_name1"><h3>اطلاعات مشتری</h3></label>
                                                     <br>
                                                     <input type="hidden" name="ID_C" value="{{ID_C}}">
-                                                    <input type="hidden" name="NAME_C" value="{{list_costumers[0][5]}}">
-                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل : {{list_costumers[0][5]}}</label>
+                                                    <input type="hidden" name="NAME_C" value="{{list_costumers[0][1]}}">
+                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل : {{list_costumers[0][1]}}</label>
                                                     <br>
-                                                     <label class="form-label" data-search="on" id="C_Natnaiol_id">کد پستی : {{list_costumers[0][10]}}</label>
+                                                     <label class="form-label" data-search="on" id="C_Natnaiol_id">کد پستی : {{list_costumers[0][5]}}</label>
                                                     <br>
-                                                    <label class="form-label" data-search="on" id="C_Phone">شماره تلفن : {{list_costumers[0][3]}}</label>
+                                                    <label class="form-label" data-search="on" id="C_Phone">شماره تلفن : {{list_costumers[0][8]}}</label>
                                                     <br>
-                                                    <label class="form-label" data-search="on" id="C_address">آدرس : {{list_costumers[0][14]}}</label>
+                                                    <label class="form-label" data-search="on" id="C_address">آدرس : {{list_costumers[0][4]}}</label>
                                                 </div>
                                                 <hr>
 
@@ -97,7 +97,7 @@
                                                                 <div class="form-control-wrap" data-search="on">
                                                                     <select class="form-select" data-search="on" name="product[]">
                                                                         {%for i in list_product%}
-                                                                        <option value="{{i[0]}}">{{i[2]}}</option>
+                                                                        <option value="{{i[0]}}">{{i[1]}}</option>
                                                                         {%endfor%}
                                                                     </select>
                                                                 </div>
@@ -170,81 +170,44 @@
                                     </li>
                                     <!-- .nk-menu-heading -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Invoice" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
                                             <span class="nk-menu-text">فاکتور ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/SA/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                                <a href="/SA/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Product_list" class="nk-menu-link nk-menu-toggle">
-                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
-                                            <span class="nk-menu-text">محصولات</span>
-                                        </a>
-                                        <ul class="nk-menu-sub">
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Product_list" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
-                                            </li>
-                                        </ul>
-                                        <!-- .nk-menu-sub -->
-                                    </li>
-                                    <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Customers" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Customer" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-user-list"></em></span>
                                             <span class="nk-menu-text">مشتریان</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
-                                            </li>
-                                        </ul>
-                                        <!-- .nk-menu-sub -->
-                                    </li>
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-
-                                    <!-- .nk-menu-item -->
-                                    <li class="nk-menu-item has-sub">
-                                        <a href="/IT/getdata" class="nk-menu-link nk-menu-toggle">
-                                            <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
-                                            <span class="nk-menu-text">جمع آوری دیتا</span>
-                                        </a>
-                                        <ul class="nk-menu-sub">
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
+                                                <a href="/SA/Customer" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
                                             </li>
 
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/getdata_update" class="nk-menu-link"><span class="nk-menu-text">آپدیت دیتا</span></a>
-                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Tickets" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/SA/Tickets" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
                                             <span class="nk-menu-text">تیکت ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
+                                                <a href="/SA/Tickets" class="nk-menu-link"><span class="nk-menu-text">تیکت ها</span></a>
                                             </li>
 
                                         </ul>
@@ -410,7 +373,7 @@
                                                                 <div class="form-control-wrap" data-search="on">
                                                                     <select class="form-select" data-search="on" name="product[]">
                                                                         {%for i in list_product%}
-                                                                        <option value="{{i[0]}}">{{i[2]}}</option>
+                                                                        <option value="{{i[0]}}">{{i[1]}}</option>
                                                                         {%endfor%}
                                                                     </select>
                                                                 </div>
