creat section of print preinvoice for sale section adn it woeks

--- a/New_version/templates/SA/Pre_invoice/index.html
+++ b/New_version/templates/SA/Pre_invoice/index.html
@@ -81,7 +81,7 @@
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title"><a href="/SA/Pre_invoice_details_it?P_ID={{i[0]}}">{{i[0]}}</a></span>
+                                                                    <span class="title"><a href="/SA/Pre_Invoice_details?P_ID={{i[0]}}">{{i[0]}}</a></span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
