--- a/New_version/templates/SA/Pre_invoice/Invoice_details.html
+++ b/New_version/templates/SA/Pre_invoice/Invoice_details.html
@@ -8,7 +8,7 @@
                                         <div class="nk-block-between g-3">
                                             <div class="nk-block-head-content">
                                                 <h3 class="nk-block-title page-title">
-                                                    فاکتور <strong class="text-primary small">شماره {{pre_invoice_data[0][1]}}</strong>
+                                                    سفارش مشتری <strong class="text-primary small">شماره {{pre_invoice_data[0][1]}}</strong>
                                                 </h3>
                                                 <div class="nk-block-des text-soft">
                                                     <ul class="list-inline">
@@ -20,8 +20,8 @@
                                                 </div>
                                             </div>
                                             <div class="nk-block-head-content">
-                                                <a href="/IT/Pre_Invoice" class="btn btn-outline-light bg-white d-none d-sm-inline-flex"><em class="icon ni ni-arrow-left"></em><span>بازگشت</span></a>
-                                                <a href="/IT/Pre_Invoice" class="btn btn-icon btn-outline-light bg-white d-inline-flex d-sm-none"><em class="icon ni ni-arrow-left"></em></a>
+                                                <a href="/SA/Pre_Invoice" class="btn btn-outline-light bg-white d-none d-sm-inline-flex"><em class="icon ni ni-arrow-left"></em><span>بازگشت</span></a>
+                                                <a href="/SA/Pre_Invoice" class="btn btn-icon btn-outline-light bg-white d-inline-flex d-sm-none"><em class="icon ni ni-arrow-left"></em></a>
                                             </div>
                                         </div>
                                     </div>
@@ -29,8 +29,8 @@
                                     <div class="nk-block">
                                         <div class="invoice">
                                             <div class="invoice-action">
-                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="IT/preinvoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
-                                                 <a class="btn btn-icon btn-lg btn-danger  " href="IT/preinvoice_delet_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-trash"></em></a>
+                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/SA/pre_invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
+
                                             </div>
                                             <!-- .invoice-actions -->
                                             <div class="invoice-wrap">
@@ -39,23 +39,23 @@
                                                 </div>
                                                 <div class="invoice-head">
                                                     <div class="invoice-contact">
-                                                        <span class="overline-title">فاکتور به </span>
+                                                        <span class="overline-title">سفارش برای </span>
                                                         <div class="invoice-contact-info">
-                                                            <h4 class="title">{{customer_details[0][5]}}</h4>
+                                                            <h4 class="title">{{customer_details[0][1]}}</h4>
                                                             <ul class="list-plain">
                                                                 <li>
                                                                     <em class="icon ni ni-map-pin-fill"></em>
-                                                                    <span>{{customer_details[0][14]}}
+                                                                    <span>{{customer_details[0][4]}}
                                                                     </span>
                                                                 </li>
-                                                                <li><em class="icon ni ni-call-fill"></em><span>{{customer_details[0][3]}}</span></li>
+                                                                <li><em class="icon ni ni-call-fill"></em><span>{{customer_details[0][8]}}</span></li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                     <div class="invoice-desc">
-                                                        <h3 class="title">پیش فاکتور ها</h3>
+                                                        <h3 class="title">سفارش</h3>
                                                         <ul class="list-plain">
-                                                            <li class="invoice-id"><span>شناسه فاکتور داخلی</span>:<span>{{pre_invoice_data[0][1]}}</span></li>
+                                                            <li class="invoice-id"><span>شناسه سفارش داخلی</span>:<span>{{pre_invoice_data[0][1]}}</span></li>
                                                             <li class="invoice-date"><span>{{pre_invoice_lookup[0][7]}}</span></li>
                                                         </ul>
                                                     </div>
@@ -80,9 +80,9 @@
                                                                     <td>
                                                                         {{pre_invoice_data[i][14]}}
                                                                     </td>
-                                                                    <td>{{pre_invoice_data[i][6]}}  ریال</td>
+                                                                    <td>{{pre_invoice_data[i][15]}}  ریال</td>
                                                                     <td>{{pre_invoice_data[i][3]}}</td>
-                                                                    <td>{{pre_invoice_data[i][6]*pre_invoice_data[i][3]}} ریال</td>
+                                                                    <td>{{pre_invoice_data[i][16]}} ریال</td>
                                                                 </tr>
                                                             {%endfor%}
                                                             </tbody>
@@ -127,7 +127,7 @@
                     </div>
 {% endblock %}
 {% block menu %}
-                     <div class="nk-sidebar-content">
+                   <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
