creat delet section for preinvoice in sale section

--- a/New_version/templates/SA/Pre_invoice/Invoice_details.html
+++ b/New_version/templates/SA/Pre_invoice/Invoice_details.html
@@ -30,7 +30,7 @@
                                         <div class="invoice">
                                             <div class="invoice-action">
                                                 <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/SA/pre_invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
-
+                                                <a class="btn btn-icon btn-lg btn-danger" href="/SA/preinvoice_delet_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-trash"></em></a>
                                             </div>
                                             <!-- .invoice-actions -->
                                             <div class="invoice-wrap">
