finall commit for sale section today and it was for insert and delet and show details and lookup for sale section about preinvoice and sale customer list and ticket and all of them work to day

--- a/New_version/templates/SA/index.html
+++ b/New_version/templates/SA/index.html
@@ -114,7 +114,7 @@
                                                             {%for i in list_factors%}
                                                             <div class="nk-tb-item">
                                                                 <div class="nk-tb-col">
-                                                                    <span class="tb-lead"><a href="/SA/Invoice_details?P_ID={{i[0]}}">#{{i[0]}}</a></span>
+                                                                    <span class="tb-lead"><a href="/SA/Pre_Invoice_details?P_ID={{i[0]}}">#{{i[0]}}</a></span>
                                                                 </div>
                                                                 <div class="nk-tb-col tb-col-sm">
                                                                     <div class="user-card">
