--- a/New_version/templates/SA/Pre_invoice/index.html
+++ b/New_version/templates/SA/Pre_invoice/index.html
@@ -94,7 +94,13 @@
                                                                 <span class="tb-sub">{{i[7]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[5]}}</span>
+                                                                {% if i[5] == 0: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار تایید</span></span>
+                                                                {% endif %}
+                                                                {% if i[5] == -1: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-danger">تایید نشده</span></span>
+                                                                {% endif %}
+
                                                             </div>
 
 
