update all print page for stamp for parso

--- a/New_version/templates/ACC/Invoice/Invoice_Print.html
+++ b/New_version/templates/ACC/Invoice/Invoice_Print.html
@@ -11645,7 +11645,7 @@ body.dark .ui-datepicker select {
             position: absolute;
             top: -60px;
             left: 34%;
-            width: 10rem;
+            width: 15rem;
         }
 
         #seller_sign_sec .stamp{
@@ -12149,8 +12149,9 @@ body.dark .ui-datepicker select {
                                     <tr>
                                         <td colspan="6" id="seller_sign_sec">
                                             <!--<img src="/uploads/Signs/2023/11/1699185410آقای_عباسپور.png" class="sign">-->
-                                                                                        <img src="https://mpsystem.ir/assets/media/image/stamp.png" class="stamp">
-                                                                                        <small>مهر و امضای فروشنده</small>
+                                            <img src="/static/images_mohr/sarhangi.png" class="sign">
+                                            <img src="/static/images_mohr/parso.png" class="stamp">
+                                            <small>مهر و امضای فروشنده</small>
                                         </td>
                                         <td colspan="6"><small>مهر و امضای خریدار</small></td>
                                     </tr>
