--- a/New_version/templates/ACC/Invoice_sended/Invoice_Print.html
+++ b/New_version/templates/ACC/Invoice_sended/Invoice_Print.html
@@ -12149,7 +12149,9 @@ body.dark .ui-datepicker select {
                                     <tr>
                                         <td colspan="6" id="seller_sign_sec">
                                             <!--<img src="/uploads/Signs/2023/11/1699185410آقای_عباسپور.png" class="sign">-->
-                                                                                        <img src="https://mpsystem.ir/assets/media/image/stamp.png" class="stamp">
+
+                                            <img src="/static/images_mohr/sarhangi.png" class="sign">
+                                            <img src="/static/images_mohr/parso.png" class="stamp">
                                                                                         <small>مهر و امضای فروشنده</small>
                                         </td>
                                         <td colspan="6"><small>مهر و امضای خریدار</small></td>
