--- a/New_version/templates/SA/Ticket/ticket_add.html
+++ b/New_version/templates/SA/Ticket/ticket_add.html
@@ -135,7 +135,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                         <div class="nk-sidebar-content">
+                          <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -149,18 +149,16 @@
                                     <li class="nk-menu-item has-sub">
                                         <a href="/SA/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                            <span class="nk-menu-text">فاکتور ها</span>
+                                            <span class="nk-menu-text">سفارشات</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/SA/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/SA/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور شده ها</span></a>
                                             </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/SA/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
-                                            </li>
+
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
