--- a/New_version/templates/ACC/Invoice/index.html
+++ b/New_version/templates/ACC/Invoice/index.html
@@ -16,6 +16,8 @@
                                                     <a href="#" class="btn btn-icon btn-trigger toggle-expand me-n1" data-target="pageMenu"><em class="icon ni ni-more-v"></em></a>
                                                     <div class="toggle-expand-content" data-content="pageMenu">
                                                         <ul class="nk-block-tools g-3">
+                                                                <a href="/ACC/Invoice?limit_id={{limit_id+10}}" class="btn btn-primary  d-md-inline-flex" style="margin-left:10px;"><span>صفحه بعد</span></a>
+                                                                <a href="/ACC/Invoice?limit_id={{limit_id-10}}" class="btn btn-primary d-md-inline-flex" style="margin-left:10px;"><span>صفحه قبل</span></a>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -49,15 +51,11 @@
 
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
-                                                                    <img src="./images/product/a.png" alt="" class="thumb" />
                                                                     <span class="title"><a href="/ACC/Invoice_details?P_ID={{i[0]}}">{{i[0]}}</a></span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <div class="user-card">
-                                                                <div class="user-avatar user-avatar-sm bg-info">
-                                                                    <em class="icon ni ni-user-alt"></em>
-                                                                </div>
                                                                 <span class="tb-lead">{{i[9]}}</span>
                                                                 </div>
                                                             </div>
@@ -67,9 +65,31 @@
                                                             <div class="nk-tb-col">
                                                                 <span class="tb-sub">{{i[7]}}</span>
                                                             </div>
+                                                                                                                        {% if i[5] == 0: %}
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[5]}}</span>
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار</span></span>
                                                             </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 1: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-info">در حال ارسال</span></span>
+                                                            </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 2: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">لغو ارسال</span></span>
+                                                            </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 3: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-danger">حذف شده</span></span>
+                                                            </div>
+                                                            {% endif %}
+                                                            {% if i[5] == 4: %}
+                                                            <div class="nk-tb-col tb-col-md">
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-success">برگشت موفق</span></span>
+                                                            </div>
+                                                            {% endif %}
 
 
                                                         </div>
@@ -107,17 +127,14 @@
                                     <li class="nk-menu-item has-sub">
                                         <a href="/ACC/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                            <span class="nk-menu-text">فاکتور ها</span>
+                                            <span class="nk-menu-text">سفارشات</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/ACC/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/ACC/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/ACC/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                                <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور شده ها</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
