--- a/New_version/templates/ACC/Pre_Invoice/index.html
+++ b/New_version/templates/ACC/Pre_Invoice/index.html
@@ -16,6 +16,8 @@
                                                     <a href="#" class="btn btn-icon btn-trigger toggle-expand me-n1" data-target="pageMenu"><em class="icon ni ni-more-v"></em></a>
                                                     <div class="toggle-expand-content" data-content="pageMenu">
                                                         <ul class="nk-block-tools g-3">
+                                                                <a href="/ACC/Pre_Invoice?limit_id={{limit_id+10}}" class="btn btn-primary  d-md-inline-flex" style="margin-left:10px;"><span>صفحه بعد</span></a>
+                                                                <a href="/ACC/Pre_Invoice?limit_id={{limit_id-10}}" class="btn btn-primary d-md-inline-flex" style="margin-left:10px;"><span>صفحه قبل</span></a>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -33,7 +35,7 @@
                                                         <div class="nk-tb-item nk-tb-head">
 
                                                             <div class="nk-tb-col tb-col-sm">
-                                                                <span>شماره فاکتور</span>
+                                                                <span>شماره سفارش مشتری</span>
                                                             </div>
                                                             <div class="nk-tb-col"><span>خریدار</span></div>
                                                             <div class="nk-tb-col"><span>فروشنده</span></div>
@@ -49,15 +51,13 @@
 
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
-                                                                    <img src="./images/product/a.png" alt="" class="thumb" />
+                                                                    <!--<img src="./images/product/a.png" alt="" class="thumb" />-->
                                                                     <span class="title"><a href="/ACC/Pre_Invoice_details?P_ID={{i[0]}}">{{i[0]}}</a></span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <div class="user-card">
-                                                                <div class="user-avatar user-avatar-sm bg-info">
-                                                                    <em class="icon ni ni-user-alt"></em>
-                                                                </div>
+
                                                                 <span class="tb-lead">{{i[9]}}</span>
                                                                 </div>
                                                             </div>
@@ -68,7 +68,15 @@
                                                                 <span class="tb-sub">{{i[7]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[5]}}</span>
+                                                                {% if i[5] == 0: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار تایید</span></span>
+                                                                {% endif %}
+                                                                {% if i[5] == -1: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-danger">تایید نشده</span></span>
+                                                                {% endif %}
+                                                                {% if i[5] == 1: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-success">تایید شده</span></span>
+                                                                {% endif %}
                                                             </div>
 
 
@@ -107,17 +115,14 @@
                                     <li class="nk-menu-item has-sub">
                                         <a href="/ACC/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                            <span class="nk-menu-text">فاکتور ها</span>
+                                            <span class="nk-menu-text">سفارشات</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/ACC/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/ACC/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
-                                            </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/ACC/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
+                                                <a href="/ACC/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور شده ها</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
