--- a/New_version/templates/SA/Pre_invoice/Invoice_details.html
+++ b/New_version/templates/SA/Pre_invoice/Invoice_details.html
@@ -29,8 +29,10 @@
                                     <div class="nk-block">
                                         <div class="invoice">
                                             <div class="invoice-action">
+
                                                 <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="/SA/pre_invoice_print_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
                                                 <a class="btn btn-icon btn-lg btn-danger" href="/SA/preinvoice_delet_it?id={{pre_invoice_data[0][1]}}" target="_blank"><em class="icon ni ni-trash"></em></a>
+
                                             </div>
                                             <!-- .invoice-actions -->
                                             <div class="invoice-wrap">
@@ -127,7 +129,7 @@
                     </div>
 {% endblock %}
 {% block menu %}
-                   <div class="nk-sidebar-content">
+                    <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -141,18 +143,16 @@
                                     <li class="nk-menu-item has-sub">
                                         <a href="/SA/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
-                                            <span class="nk-menu-text">فاکتور ها</span>
+                                            <span class="nk-menu-text">سفارشات</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
                                                 <a href="/SA/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">سفارش های مشتری</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/SA/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور شده ها</span></a>
                                             </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/SA/Invoice_sended" class="nk-menu-link"><span class="nk-menu-text">ارسال شده</span></a>
-                                            </li>
+
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
