--- a/New_version/templates/base/base.html
+++ b/New_version/templates/base/base.html
@@ -27,9 +27,10 @@
                             <a href="#" class="nk-nav-compact nk-quick-nav-icon d-none d-xl-inline-flex" data-target="sidebarMenu"><em class="icon ni ni-menu"></em></a>
                         </div>
                         <div class="nk-sidebar-brand">
-                            <a href="html/index.html" class="logo-link nk-sidebar-logo">
-                                <img class="logo-light logo-img" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="داشبورد" />
-                                <img class="logo-dark logo-img" src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="داشبورد" />
+                            <a href="/" class="logo-link nk-sidebar-logo">
+                                <!--<img class="logo-light logo-img" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="داشبورد" />
+                                <img class="logo-dark logo-img" src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="داشبورد" />-->
+                                پرسو تجارت ایرانیان
                             </a>
                         </div>
                     </div>
